tests/paczka1/small_fuzzy/68376704.err
Error in line 8: 9wjFF A336 92,2
Error in line 15: Fi2aQb2 S915 47,X
